# photo-portfolio-store

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  biome.json  commitlint.config.js  docker-compose.dev.yml  openapi.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  epic.yml  feature.yml
.github/workflows/: ci.yml
apps/api/: package.json  vitest.config.integration.ts  vitest.config.ts
apps/api/scripts/: seed.ts  teardown.ts
apps/api/src/: env.ts  index.ts  server.ts
apps/api/test/: admin-health-route.test.ts  admin-payout-retry-route.test.ts  admin-refunds.test.ts  audit-export-route.test.ts  audit-export.test.ts  auth-passwordless.test.ts  auth.integration.test.ts  biometric-data.test.ts  bipa.test.ts  bundles-route.test.ts  bundles.test.ts  cart-bundles.test.ts  cart.test.ts  checkout.test.ts  downloads.test.ts  event-stats-route.test.ts  (+34 more)
apps/inference/: README.md  pyproject.toml
apps/inference/app/: instrument.py  main.py  settings.py
apps/inference/app/lib/: eye_aspect_ratio.py
apps/inference/app/routes/: quality.py
apps/inference/tests/: test_health.py  test_quality.py  test_routes.py
apps/worker/: package.json  vitest.config.integration.ts  vitest.config.ts
docs/: branch-protection.md  integration-smoke.md  local-dev.md  manual-qa.md  observability-sentry.md  pre-commit.md  roadmap.md
docs/adr/: 0000-record-architecture-decisions.md  0001-stack.md  0002-orm-migrations.md  0003-secrets.md
docs/compliance/: walkthrough.md
(+72 files in other folders)
